--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,6 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: go get -u golang.org/x/lint/golint && golint -set_exit_status
       - run: go get -v -t -d ./...
       - run: go test -v ./...
