--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -28,7 +28,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.24.5'
+        go-version-file: 'go.mod'
 
     - name: Check out code
       uses: actions/checkout@v5
