--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -4,10 +4,10 @@
 name: Build and Test
 
 on:
-  pull_request:
   push:
-    tags-ignore:
-      - 'v*'
+    branches:
+      - '**'
+  pull_request:
 
 jobs:
 
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.25.0'
+        go-version-file: 'go.mod'
 
     - name: Build
       run: go build -v ./...
